Fix issue with not collapsing navigation

--- a/resources/stylesheets/component/mobile/aside.navigation_main.less
+++ b/resources/stylesheets/component/mobile/aside.navigation_main.less
@@ -59,7 +59,7 @@ body{
 		a.list-group-item {
 			height: 48px;
 			line-height: 28px;
-			padding-top: 0px;
+			padding-top: 10px;
 			padding-bottom: 0px;
 			span {
 				display: inline-block;
