--- a/resources/stylesheets/component/mobile/aside.navigation_main.usercontainer.less
+++ b/resources/stylesheets/component/mobile/aside.navigation_main.usercontainer.less
@@ -58,7 +58,7 @@ body .navigation-main .calumma-mobile-visible.bs-mobile-user-button {
 				color: white;
 			}
 			& + .separator {
-				margin-top: 30px;
+				margin-top: 10px;
 			}
 		}
 		li{
